ChangeLog for package XiMpLe

changes in version 0.03-11 (2012-03-13)
  - added opton "object" to parseXMLTree(), to be able to parse XML trees not only from files, but also character vectors
  - output of internal function XML.single.tags() has no colname any more
  - text values of nodes are no longer followed by an empty newline in pasteXMLNode()

changes in version 0.03-10 (2012-03-11)
  - fixed bug in parsing of attributes, their names are now all quoted by default o not run into issues
    if they contain R-sensitive characters (like "http-equiv")

changes in version 0.03-9 (2012-03-10)
  - re-formatted the ChangeLog so roxyPackage can translate it into a NEWS.Rd file

changes in version 0.03-8 (2011-11-17)
  - rewrote large parts of internal function XML.single.tags() for more efficiency, allthough it's still quite
    lethargic when handling huge XML trees

changes in version 0.03-7 (2011-10-23)
  - added "&" to the special characters for "tidy" (only applies if theres space before and after)
  - "tidy" now also indents text in comments and CDATA if it includes the newline character

changes in version 0.03-6 (2011-10-09)
  - added "tidy" option to the paste functions, which is TRUE by default since "<" and ">" are
    invalid in attributes and text anyway

changes in version 0.03-5 (2011-10-07)
  - fixed tree parsing bug (in rare cases, comment and CDATA entries caused parsing to choke on
    empty lines)

changes in version 0.03-4 (2011-10-01)
  - added show methods for objects of class XiMpLe.doc and XiMpLe.node

changes in version 0.03-3 (2011-09-27)
  - changed default 'shine' value of pasteXMLNode() and pasteXMLTree() from 2 to 1
  - pasteXMLNode() and pasteXMLTree() now try to call each other if fed with the wrong class object,
    but a warning is given
  - changed handling of 'value' in pasteXMLNode(), now reflects 'shine' setting/indentation

changes in version 0.03-2 (2011-09-17)
  - added docs for classed XiMpLe.doc and XiMpLe.node
