@@ -7,4 +7,6 @@ export(parseXMLTree)
 export(pasteXMLNode)
 export(pasteXMLTag)
 export(pasteXMLTree)
+export(XMLNode)
+export(XMLTree)
 import(methods)
