@@ -3,6 +3,7 @@
 \encoding{UTF-8}
 \section{Changes in XiMpLe version 0.03-11 (2012-03-13)}{
   \itemize{
+    \item added functions \code{XMLNode()} and \code{XMLTree()} as constructor functions for XML nodes and trees.
     \item added opton \code{"object"} to \code{parseXMLTree()}, to be able to parse XML trees not only from files, but also character vectors
     \item output of internal function \code{XML.single.tags()} has no colname any more
     \item text values of nodes are no longer followed by an empty newline in \code{pasteXMLNode()}
