@@ -1,6 +1,7 @@
 ChangeLog for package XiMpLe
 
 changes in version 0.03-11 (2012-03-13)
+  - added functions XMLNode() and XMLTree() as constructor functions for XML nodes and trees.
   - added opton "object" to parseXMLTree(), to be able to parse XML trees not only from files, but also character vectors
   - output of internal function XML.single.tags() has no colname any more
   - text values of nodes are no longer followed by an empty newline in pasteXMLNode()
